--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1"
   }
