--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.0"
   }
 }
